adjusted footer to prevent horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -208,9 +208,10 @@ ol, ul {
 
 /*#region*/ /* footer */
 footer {
+	padding: 0;
 	background: #000;
 	position: relative;
-	width: 100vw;
+	width: calc(100vw - 15px);
 	height: 100px;
 }
 .socials {
